[Major] Implemented groups in privilege. Refactored nearly everything